[package]
name = "logic_cad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
wgpu = "0.17.0"
winit = "0.28"
vello = { git = "https://github.com/linebender/vello.git" }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
image = { version = "0.24", features = ["jpeg", "png"] }

egui = "0.23.0"
egui-wgpu = "0.23.0"
egui-winit = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image"] }

# macos stuff
# cacao = "0.3.0"
# cacao = { path = "../cacao" }
# raw-window-handle = "0.5.2"
# objc_id = "0.1.1"
# objc = "0.2.7"

# cocoa = { git = "https://github.com/servo/core-foundation-rs.git", branch = "master" }
